--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/express": "^4.17.18",
     "@types/node": "^20.8.0",
+    "@types/nodemailer": "^6.4.17",
     "rimraf": "^5.0.5",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
@@ -23,6 +24,8 @@
     "dotenv": "^16.3.1",
     "env-var": "^7.4.1",
     "express": "^4.18.2",
-    "moongose": "^1.0.0"
+    "jsonwebtoken": "^9.0.2",
+    "moongose": "^1.0.0",
+    "nodemailer": "^6.10.0"
   }
 }
